--- a/styles/scss/identity.scss
+++ b/styles/scss/identity.scss
@@ -659,64 +659,138 @@ TODO: Download Page
 
 /*  
 ◈──────────────────────────────────────────────────────◈
-TODO: Types Table
+TODO: Types Interactions
 ◈──────────────────────────────────────────────────────◈ */
 
+.types_interactions_switchs .switch {
+
+    width: 230px;
+}
+
 .types_interactions_box {
+    
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
+
+    .type_interactions {
+        margin-left: 0;
+        margin-right: 0;
+        margin-left: $margin_horizontal;
+        margin-right: $margin_horizontal;
+        margin-top:calc(2*#{$margin_vertical}) ;
+
+        .name th > *{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            img{margin-right: 8px;}
+        }
+
+        tr:hover {
+            background: 0 !important;
+        }
+
+        .info {
+            border-bottom: 1px solid $color_theme;
+
+            th {
+                width: 50%;
+            }
+
+            th:nth-of-type(1) {
+                border-right: 1px solid $color_theme; // $color_border_table;
+            }
+        }
+
+        td + td {
+            border-width: 1px !important; 
+        }
+
+        /* .good .txt {
+            color: $color_text_token_green; 
+            color: hsl(120, 100%, 47%);
+        }
+
+        .bad .txt {
+            color: $color_text_token_red; 
+            color: red;
+        } */
+
+        .txt {
+            display: block;
+            width: max-content; -moz-width: fit-content; width: -moz-fit-content; width: fit-content; // <- Declarações necessárias para garantir que o Firefox funcione como se suportasse 'width: fit-content'. (Ao menos 1 delas deve funcionar.)
+            margin: 6px auto 12px;
+            // text-transform: capitalize;
+        }
+
+        .type_icon {
+            width: 32px; // 48px 
+            margin: 0 2px;
+        }
+
+        .effect_icon {
+            width: 28px;
+        }
+    }
+
+    .Template {
+        display: none;
+    }
+        
+    /* .Robot { 
+        display: none; 
+    } */
 }
 
-.types_interactions {
-    margin-left: 0;
-    margin-right: 0;
-    margin-left: $margin_horizontal;
-    margin-right: $margin_horizontal;
-    margin-top:calc(2*#{$margin_vertical}) ;
-
-    .name th > *{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img{margin-right: 8px;}
+.type_interactions.SimplifiedMode {
+    
+    .info th {
+        // width: 50%;
+        width: 182px;
     }
 
-    td + td {
-        border-width: 1px !important; 
+    .good {
+
+        .attacking {
+            background-image: linear-gradient(to right, 
+        hsla(193, 100%, 96%, 0), hsla(120, 100%, 96%, 1) 5% 95%, hsla(120, 100%, 96%, 1)); // Não use a palavra-chave 'transparent' nesta instrução, pois caso contrário vai bugar no Safari
+        }
+        
+        .defending {
+            background-image: linear-gradient(to right, 
+        hsla(120, 100%, 96%, 1), hsla(120, 100%, 96%, 1) 5% 95%, hsla(193, 100%, 96%, 0)); // Não use a palavra-chave 'transparent' nesta instrução, pois caso contrário vai bugar no Safari
+        }
     }
 
-    .good .txt {
-        color: $color_text_token_green; 
-        //border: 1px solid $color_border_token_green;
-        //background-color: $bg_token_green;
-        color: hsl(120, 100%, 47%);
+    .bad {
+
+        .attacking {
+            background-image: linear-gradient(to right, 
+        hsla(0, 100%, 96%, 0), hsla(0, 100%, 96.6%, 1) 5% 95%, hsla(0, 100%, 96.6%, 1)); // Não use a palavra-chave 'transparent' nesta instrução, pois caso contrário vai bugar no Safari
+        }
+        
+        .defending {
+            background-image: linear-gradient(to right, 
+        hsla(0, 100%, 96.6%, 1), hsla(0, 100%, 96.6%, 1) 5% 95%, hsla(0, 100%, 96%, 0)); // Não use a palavra-chave 'transparent' nesta instrução, pois caso contrário vai bugar no Safari
+        }
     }
 
-    .bad .txt {
-        color: $color_text_token_red; 
-        //border: 1px solid $color_border_token_red;
-        //background-color: $bg_token_red;
-        color: red;
-    }
+    .interaction {
+        display: inline;
 
-    //.dmgTo_x0 {color: White;background-color: Black;}
+        .txt {
+            display: none;
+        }
 
-    .txt {
-        display: block;
-        margin-bottom: 8px;
-    }
-
-    .type_icon {
-        width: 32px; // 48px 
-    }
-
-    .effect_icon {
-        width: 28px;
+        .type_icon {
+            margin: 3px 2px -3px;
+        }
     }
 }
+
 
 
 /*  
@@ -731,7 +805,7 @@ TODO: Types Table
 }
 */
 
-.types_table_box {
+.offensive_types_table_box, .types_table_box {
     /* 
     display: none;
 
@@ -750,8 +824,14 @@ TODO: Types Table
 
     @media (min-width: $screen_small_widthLimit) {
 
+        width: max-content; -moz-width: fit-content; width: -moz-fit-content; width: fit-content; // <- Declarações necessárias para garantir que o Firefox funcione como se suportasse 'width: fit-content'. (Ao menos 1 delas deve funcionar.)
         max-width: calc(100% - (2 * #{$margin_horizontal}) - 3px);
     }
+}
+
+.offensive_types_table_box {
+
+    display: none;
 }
 
 .types_table {
@@ -834,9 +914,10 @@ TODO: Types Table
 }
 
 .types_table {
-    .Robot, .Snow_Ice{
+
+    .Robot {
         color: white;
-        background-color: rgb(0, 0, 0);
+        background-color: black;
     }
 
     th.Robot {
@@ -844,7 +925,6 @@ TODO: Types Table
     }
 
     .Digital { display: none; }
-    // .Snow_Ice { display: none; }
     // .Robot { display: none; }
 }
 
@@ -874,6 +954,32 @@ TODO: Types Table
 // }
 
 /**/
+
+.types_table_effects {
+    
+    margin: auto;
+    max-width: 524px;
+
+    ul {
+        list-style: none;
+        content: "\200B"; // Correção de bug de "list-style: none" do Safari
+    }
+
+    li {
+        display: flex;
+        align-items: center;
+
+        .effect_icon {
+            width: 25px; // 26px //28px
+            height: 25px; 
+            margin-right: 4px;
+        }
+
+        span {
+            margin-right: 6px;
+        }
+    }
+}
 
 /*  
 ◈──────────────────────────────────────────────────────◈
