--- a/framework/styles/css/defaults - cópia.css
+++ b/framework/styles/css/defaults - cópia.css
@@ -164,26 +164,6 @@ body {
 
 /*  
 ◈──────────────────────────────────────────────────────◈
-TODO: Syntaxes Elements
-◈──────────────────────────────────────────────────────◈ */
-sc1 {
-  color: red;
-}
-
-sc2 {
-  color: blue;
-}
-
-sc3 {
-  color: green;
-}
-
-sc4 {
-  color: purple;
-}
-
-/*  
-◈──────────────────────────────────────────────────────◈
 TODO: Margins
 ◈──────────────────────────────────────────────────────◈ */
 .offset {
@@ -326,10 +306,6 @@ div, header, nav, main, article, section, aside, footer {
 a {
   color: blue;
   text-decoration: none;
-}
-
-a[href^="http"] {
-  word-break: break-all;
 }
 
 h1 {
@@ -656,11 +632,6 @@ strong, b, em, i {
   text-decoration: underline;
 }
 
-mark {
-  color: inherit;
-  background: 0;
-}
-
 abbr {
   text-decoration: none !important;
   font-variant: none;
@@ -685,7 +656,7 @@ code, samp {
     text-align: left; */
   font-size: 19rem;
   font-family: "Digital Disk", Verdial, Times, "Times New Roman", Georgia, serif;
-  text-align: left;
+  text-align: justify;
 }
 
 pre {
@@ -849,14 +820,6 @@ dl > div:not(:nth-last-of-type(1)) {
 ◈──────────────────────────────────────────────────────◈ */
 /*  TODO:        2 ▶ Simple
 ◈──────────────────────────────────────────────────────◈ */
-.font_default {
-  font-family: "Digital Disk", Verdial, Times, "Times New Roman", Georgia, serif;
-}
-
-.font_default_2 {
-  font-family: Verdial, Times, "Times New Roman", Georgia, serif;
-}
-
 .font_size {
   font-size: 19rem;
 }
@@ -897,7 +860,6 @@ dl > div:not(:nth-last-of-type(1)) {
     background-clip: text;
     text-fill-color: transparent;*/
 .highlight {
-  display: none;
   background: url(../../images/colors/text_highlight.png) center/100% 100%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -915,19 +877,6 @@ dl > div:not(:nth-last-of-type(1)) {
     background: $bg_token_blue;
     color: $color_text_token_blue;
 } */
-.highlight2 {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-color: deepSkyBlue;
-  padding: 0px 7px;
-  border: 1px solid white;
-  border-radius: 14px;
-  text-indent: 0;
-  word-break: break-all;
-}
-
 .mini_topic {
   font-size: 19rem;
   background: 0;
@@ -1168,15 +1117,15 @@ span.token.black, .example_1 > .black.label, .oneObs > .black.label, .attention_
 }
 
 .noListStyle > li::before {
-  content: initial;
+  content: "";
 }
 
 .noListStyle dt::before {
-  content: initial;
+  content: "";
 }
 
 .noListStyle dt::after {
-  content: initial;
+  content: '';
 }
 
 .noListStyle dt, .noListStyle dd {
@@ -1270,7 +1219,7 @@ span.token.black, .example_1 > .black.label, .oneObs > .black.label, .attention_
 }
 
 .list_index a[href^="#"]:not([href="#"]) {
-  padding-left: 0px;
+  padding-right: 0px;
   background: 0;
 }
 
@@ -1899,18 +1848,17 @@ a[href^="http"] {
   background-repeat: no-repeat;
   background-size: 19px 19px;
   background-image: url("../../images/icons/anchor_web.svg");
-  background-position: 0% 0px;
-  padding-left: calc(19px + 6px);
+  background-position: 99% 0;
+  /* Se deixar em 100% da bug no Chrome pra PC! */
+  padding-right: calc(19px + 4px);
 }
 
 a[href^="#"]:not([href="#"]) {
   background-repeat: no-repeat;
   background-size: 19px 19px;
   background-image: url("../../images/icons/anchor_chain.svg");
-  background-position: 0% 0px;
-  padding-left: calc(19px + 4px);
-  /* background-position: 100% 0;
-    padding-right: calc(19px + 6px); */
+  background-position: 100% 0;
+  padding-right: calc(19px + 6px);
 }
 
 a[download] {
@@ -4790,8 +4738,8 @@ figure.outdoor img {
 /*  TODO:    1 ▶ Galleries
 ◈──────────────────────────────────────────────────────◈ */
 .gallery {
-  display: none;
   position: relative;
+  display: block;
   border-top: 2px solid DeepSkyBlue;
   border-bottom: 2px solid DeepSkyBlue;
   /*   
@@ -4865,12 +4813,12 @@ figure.outdoor img {
   outline: 0;
 }
 
-.gallery .imgsBox img {
+.gallery > img {
   max-width: 100%;
-  max-height: calc(100vh - 4px);
+  max-height: 100%;
 }
 
-.gallery .imgsBox img:not(:nth-of-type(1)) {
+.gallery > img:not(:nth-of-type(1)) {
   display: none;
 }
 
@@ -4886,19 +4834,15 @@ figure.outdoor img {
   z-index: 1300;
   top: 0;
   left: 0;
-  width: 100vw !important;
-  height: 100vh !important;
+  width: 100vw;
+  height: 100vh;
   border: 0;
   border-radius: 0;
   margin: 0;
-  display: flex !important;
+  display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(217deg, rgba(0, 191, 255, 0.8), rgba(0, 191, 255, 0) 71%), linear-gradient(127deg, rgba(224, 224, 224, 0.8), rgba(224, 224, 224, 0) 71%), linear-gradient(336deg, rgba(0, 255, 255, 0.8), rgba(0, 255, 255, 0) 71%), white;
-}
-
-.gallery_fullScreen .imgsBox img {
-  max-height: 100%;
 }
 
 .gallery.border_radius_big {
@@ -4910,15 +4854,11 @@ figure.outdoor img {
     border-radius: 40px;
   }
   .gallery.border_radius_big img {
-    border-radius: 40px;
+    border-radius: inherit;
   }
 }
 
 .gallery_fullScreen.border_radius_big {
-  border-radius: 0;
-}
-
-.gallery_fullScreen.border_radius_big .imgsBox img {
   border-radius: 0;
 }
 
@@ -6412,19 +6352,6 @@ a.button_full.center, a.button_text.center, a.button_icon.center, a.image.center
     para garantir que o Firefox funcione como se suportasse 'width: fit-content'. (Ao menos 1 delas deve funcionar.) */
 }
 
-/* 
-.gallery.center {
-
-    // display: flex !important;
-    display: none !important;
-}
-
-.gallery.gallery_fullScreen.center {
-
-    display: flex !important;
-    margin: 0 !important; 
-}
- */
 .line {
   border: 1px solid black;
 }
